fixed a problem that some dialogs(response, remove) are shown behind profile dialog.

--- a/css/atmos.css
+++ b/css/atmos.css
@@ -414,7 +414,7 @@ html, body {
 	top: 0px;
 	width: 100%;
 	height: 100%;
-	z-index: 1;
+	z-index: 10000;
 }
 
 .atmos-modal-wrapper {
